--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,20 @@
   padding: 0px;
   box-sizing: border-box;
   list-style-type: none;
+  font-family: "Sawarabi Gothic", sans-serif;
 }
+
+a {
+  color: #000;
+}
+
+.footer_title {
+  color: #707070;
+}
+
+.list_item {
+  color: #707070;
+  font-size: 16px;
+}
+
+
