--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,8 +1,6 @@
 .main_container {
     margin: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
 
     .choose {
         display: flex;
@@ -186,8 +184,6 @@
     }
 
     // cards
-}
-
 
 // about
 .about {
@@ -248,60 +244,91 @@
 // subscribe
 
 .subscribe {
-
-    width: 800px;
-    height: 360px;
-    background-color: #EEEEEEFF;
-    text-align: center;
+    display: flex;
+    justify-content: center;
     margin-top: 70px;
 
-    &_title {
-        font-family: "Aleo", serif;
-        font-size: 40px;
-        font-weight: 600;
-        color: #2d2d2d;
-        margin: 50px 0px 25px 0px;
-    }
 
-    &_text {
-        color: #707070;
-        margin-top: 30px;
-    }
 
-    .subscribe_form {
+    &_container {
+        width: 1000px;
+        height: 400px;
+        background-color: #F4F4F4FF;
         display: flex;
+        flex-direction: column;
         justify-content: center;
-        justify-content: baseline;
+        align-items: center;
 
 
-
-        &_input {
-            border: none;
-            border-radius: 50px 0px 0px 50px;
-            width: 300px;
-            height: 50px;
-            margin-top: 30px;
-
+        &_title {
+            font-family: "Aleo", serif;
+            font-size: 40px;
+            font-weight: 600;
+            color: #2d2d2d;
+            margin: 50px 0px 25px 0px;
         }
 
-        &_button {
-            border-radius: 50px;
-            width: 160px;
-            height: 50px;
-            border: none;
-            background-color: #5ba515ff;
-            color: white;
-            text-align: center;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
+        &_text {
+            color: #707070;
             margin-top: 30px;
+        }
 
-            &_icon {
-                font-size: 15px;
+        &_form {
+            display: flex;
+            justify-content: center;
+            justify-content: baseline;
+
+
+
+            &_input {
+                border: none;
+                border-radius: 50px 0px 0px 50px;
+                width: 350px;
+                height: 50px;
+                margin-top: 30px;
+                padding-left: 20px;
+                outline: none;
+
+
+
 
             }
+
+            &_button {
+                border-radius: 50px;
+                width: 200px;
+                height: 50px;
+                border: none;
+                background-color: #5ba515ff;
+                color: white;
+                text-align: center;
+                font-size: 16px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 10px;
+                margin-top: 30px;
+                cursor: pointer;
+
+                &:hover {
+                    background-color: rgb(183, 213, 154);
+                }
+
+                &_icon {
+                    font-size: 16px;
+                    margin-top: 5px;
+
+
+                }
+            }
         }
+
     }
+
+
+
 }
+
+// subscribe
+}
+
