--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,10 +1,8 @@
 // about
 .about {
-    margin-top: 70px;
     display: flex;
     flex-direction: column;
-    gap: 70px;
-
+    margin: 50px 0px;
 
 
     &_banner {
@@ -60,11 +58,12 @@
 
     // about
 
+
     // aboutTeam
 
     .aboutTeam {
 
-        margin: 0px 50px;
+        margin: 85px 50px;
 
         display: flex;
         justify-content: space-between;
@@ -113,6 +112,185 @@
 
     // aboutTeam
 
+
+    //Counter Section 
+    .counterSec {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 70px;
+
+        &_list {
+            display: flex;
+            gap: 80px;
+
+
+            &_item {
+                text-align: center;
+
+                &_count {
+                    font-size: 50px;
+                }
+
+                &_content {
+                    font-size: 15px;
+                    font-family: "Aleo", serif;
+                    color: #707070;
+
+                }
+            }
+        }
+    }
+
+    //Counter Section 
+
+    // introSec
+    .introSec{
+        width: 100hv;
+        height: 500px ;
+        background-color:#F6F6F6FF;
+        display: flex;
+        justify-content: space-around;
+      
+       
+        &_img{
+
+        }
+
+        &_accordion{
+          
+            display: flex;
+            align-items: center;
+
+        }
+
+    }
+     // introSec
+
+     // delivery pros
+     .deleveryPross{
+       margin:  50px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        &_title {
+            font-size: 40px;
+            color: #2d2d2d;
+            font-weight: 700;
+            font-family: "Aleo", serif;
+
+        }
+        .grid_container {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            gap: 40px;
+            padding: 20px;
+            &_clipPathright{
+                position: absolute;
+                width: 30px;
+                height: 15px;
+                clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+                background-color: #F0F0F0FF;
+                transform: rotate(90deg);
+                right: -20px;
+                top: 30px;
+               
+  
+            }
+            &_clipPathleft{
+                position: absolute;
+                width: 30px;
+                height: 15px;
+                clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+                background-color: #F0F0F0FF;
+                transform: rotate(-90deg);
+                left: -20px;
+                top: 30px;
+               
+  
+            }
+            &_title{
+                padding: 10px;
+                text-align: left;
+                color: #2d2d2d;
+            }
+            &_text{
+                padding: 10px;
+                text-align: left;
+                font-size: 15px;
+                color: #707070;
+            }
+            
+           
+    
+            &_step{
+                position: absolute;
+                width: 110px;
+                height: 27px;
+                background-color: #5BA515FF;
+                color: white;
+                font-size: 14px;
+                font-family: "Aleo", serif;
+                font-weight: 700;
+                letter-spacing: 1px;
+                padding: 2px;
+                top: -12px;
+              
+    
+            }
+            &_topright {
+                width: 450px;
+                height: 200px;
+                position: relative;
+                background-color: #f0f0f0;
+                padding: 20px;
+                text-align: center;
+                grid-column: 1;
+                grid-row: 1;
+            
+               
+              }
+              
+              &_topleft {
+                width: 450px;
+                height: 200px;
+                position: relative;
+                background-color: #f0f0f0;
+                padding: 20px;
+                text-align: center;
+                grid-column: 2;
+                grid-row: 2;
+              }
+              
+              &_bottomright {
+                width: 450px;
+                height: 200px;
+                position: relative;
+                background-color: #f0f0f0;
+                padding: 20px;
+                text-align: center;
+                grid-column: 1;
+                grid-row: 3;
+              }
+              
+              &_bottomleft {
+                width: 450px;
+                height: 200px;
+                position: relative;
+                background-color: #f0f0f0;
+                padding: 20px;
+                text-align: center;
+                grid-column: 2;
+                grid-row: 4;
+              }
+          }
+     }
+     
+      
+    
+      
+
     // ourTeam
     .ourTeam {
         margin: 0px 50px;
@@ -132,18 +310,21 @@
             display: flex;
             margin-top: 50px;
             gap: 40px;
+            transition: all 0.5s ease-in-out;
+
 
             &_card {
                 position: relative;
                 width: 372px;
                 height: 400px;
 
+                &:hover {
+                    transition: all .7s ease-in-out;
+                    transform: translateY(-15px);
+                }
 
                 &:hover .ourTeam_people_card_over {
                     visibility: visible;
-
-
-
 
                 }
 
@@ -165,6 +346,7 @@
                         left: 50%;
                         transform: translate(-50%, -50%);
                         display: flex;
+
 
 
 
@@ -218,95 +400,12 @@
 
 
     // ourTeam
-    .subscribe {
-        display: flex;
-        justify-content: center;
-        margin-top: 70px;
-    
-    
-    
-        &_container {
-            width: 1000px;
-            height: 400px;
-            background-color: #F4F4F4FF;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-    
-    
-            &_title {
-                font-family: "Aleo", serif;
-                font-size: 40px;
-                font-weight: 600;
-                color: #2d2d2d;
-                margin: 50px 0px 25px 0px;
-            }
-    
-            &_text {
-                color: #707070;
-                margin-top: 30px;
-            }
-    
-            &_form {
-                display: flex;
-                justify-content: center;
-                justify-content: baseline;
-    
-    
-    
-                &_input {
-                    border: none;
-                    border-radius: 50px 0px 0px 50px;
-                    width: 350px;
-                    height: 50px;
-                    margin-top: 30px;
-                    padding-left: 20px;
-                    outline: none;
-    
-    
-    
-    
-                }
-    
-                &_button {
-                    border-radius: 50px;
-                    width: 200px;
-                    height: 50px;
-                    border: none;
-                    background-color: #5ba515ff;
-                    color: white;
-                    text-align: center;
-                    font-size: 16px;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    gap: 10px;
-                    margin-top: 30px;
-                    cursor: pointer;
-    
-                    &:hover {
-                        background-color: rgb(183, 213, 154);
-                    }
-    
-                    &_icon {
-                        font-size: 16px;
-                        margin-top: 5px;
-    
-    
-                    }
-                }
-            }
-    
-        }
-    
-    
-    
-    }
-    
-    // subscribe
 }
 
 .active {
     color: #5ba515ff;
+}
+
+.border {
+    border-right: 1px solid #d6d5d5;
 }
