--- a/src/shared/header/header.scss
+++ b/src/shared/header/header.scss
@@ -7,6 +7,7 @@
         display: flex;
         margin-left: 50px;
         padding-top: 8px;
+        cursor: pointer;
 
         &_list {
             display: flex;
