--- a/src/pages/store/store.scss
+++ b/src/pages/store/store.scss
@@ -59,5 +59,188 @@
 
     // store Banner
 
+    //products
+    .productsSec{
+        display: flex;
+        margin: 40px;
+        gap: 20px;
+        
+
+        &_products {
+            
+          
+            &_title{
+                color: #2d2d2d;
+                letter-spacing: 1px;
+                margin-top: 20px;
+
+            }
+            &_search{
+               
+                width: 300px;
+                height: 40px;
+                border: 1px solid #d8d8d8;
+
+                &_input{
+                    width: 250px;
+                    height: 35px;
+                    border: none;
+                    padding-left:10px ;
+                    outline: none;
+                    position: relative;
+
+                   
+                    
+
+                }
+                &_icon{ 
+                    position: absolute;
+                    font-size: 20px;
+                    bottom: 79px;
+                    left: 24%;
+                    color: #707070;
+                 
+                        
+                }
+            }
+
+            &_category{
+                margin-top: 20px;
+               
+                &_list{
+                    
+                   
+                    &_item{
+                        cursor: pointer;
+
+                        margin-top: 20px;
+                        display: flex;
+                        justify-content: space-between;
+                        align-content: baseline;
+                      
+                       
+                        &_content{
+                            font-size: 16px;
+                            color: #707070;
+                            &:hover{
+                                color: #5ba515ff;
+                            }
+                        }
+                        &_count{
+                            border: 1px solid #d8d8d8;
+                            border-radius: 5px;
+                            width: 35px;
+                            text-align: center;
+                            color: #707070;
+                            &:hover{
+                                color: #5ba515ff;
+                            }
+                        }
+                    }
+                }
+            }
+            
+            &_filter{
+                &_price{
+                    display: flex;
+                    justify-content: space-around;
+                    align-items: baseline;
+                    &_btn{
+                        width: 100px;
+                        height: 40px;
+                        border: none;
+                        border-radius: 20px;
+                        background-color: #5ba515ff;
+                        color: white;
+                        font-size: 16px;
+                        letter-spacing: 1px;
+                    }
+                    &_cost{
+                        font-size: 14px;
+                        color: #707070;
+                    }
+                }
+            }
+
+            &_topRare{
+                margin-top: 30px;
+                &_list{
+                    margin-top: 30px;
+                    &_item{
+                        margin-top: 30px;
+                        display: flex;
+                      
+                        gap: 15px;
+                        &_img{
+
+                        }
+                        &_desc{
+                            color: #707070;
+                            font-size: 15px;
+                            font-weight: 100;
+                           
+                            &_money{
+                                margin-top: 2px;
+                                color: #2d2d2d;
+                                font-weight: 700;
+                            }
+
+                        }
+                    }
+                }
+            }
+
+            &_cards{
+             
+                &_nav{
+                    display: flex;
+                    align-items: baseline ;
+                    justify-content: space-between;
+                    &_filter{
+                        &_list{
+                            display: flex;
+                            align-items: baseline;
+                            gap: 10px;
+                            &_item{
+                                border: 1px solid #d8d8d8;
+                                width: 40px;
+                                height: 40px;
+                                text-align: center;
+                                padding: 8px 0px;
+
+                                &_icon{
+                                    color: #707070;
+                                }
+                                &_page{
+                                    color: #707070;
+                                }
+                            }
+                        }
+                    }
+
+                    &_sorting{
+                        &_name{
+                            color: #707070;
+                        }
+                        &_option{
+                            width: 200px;
+                            height: 30px;
+                            text-align: center;
+                            color: #707070;
+                            outline: none;
+                            border: 1px solid #d8d8d8;
+                            
+                          
+
+                        }
+                    }
+
+                }
+            }
+        }
+    }
+
+    //products
+
 
 }
